--- a/index.html
+++ b/index.html
@@ -1,15 +1,208 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfólio de Psicologia - Maithe</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <header class="container text-center py-4">
+        <img src="img/psicologa.png" alt="Foto da Psicóloga Maithe" class="rounded-circle" width="150" height="150" />
+        <p class="lead">Sou a Psicóloga Maithe</p>
+        <h1>Promovendo Saúde Mental</h1>
+        <p>Sou especialista em Psicologia com foco em bem-estar emocional, terapia cognitivo-comportamental e desenvolvimento pessoal. Aqui apresento meus projetos e áreas de atuação.</p>
+        <p>Minhas áreas de atuação</p>
+        <div>
+            <span class="badge bg-primary">Terapia Cognitivo-Comportamental</span>
+            <span class="badge bg-primary">Mindfulness</span>
+            <span class="badge bg-primary">Psicologia Positiva</span>
+            <span class="badge bg-primary">Aconselhamento</span>
+        </div>
+    </header>
 
-  </head>
-  <body>
-    <main>
+    <main class="container mt-5">
+        <h2>Meus projetos</h2>
+        <div class="row">
+            <!-- Projeto 1 -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="img/projeto-psico1.png" class="card-img-top" alt="Projeto de terapia em grupo" />
+                    <div class="card-body">
+                        <h5 class="card-title">Workshop de Saúde Mental</h5>
+                        <p class="card-text">Um programa de oficinas para promover o bem-estar emocional, técnicas de relaxamento e autoconhecimento em grupos de adultos.</p>
+                        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modal1">Veja mais</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Projeto 2 -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="img/projeto-psico2.png" class="card-img-top" alt="Aplicativo de meditação" />
+                    <div class="card-body">
+                        <h5 class="card-title">App de Meditação Guiada</h5>
+                        <p class="card-text">Aplicativo desenvolvido para ajudar pessoas a praticar mindfulness e reduzir o estresse no dia a dia.</p>
+                        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modal2">Veja mais</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Projeto 3 -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="img/projeto-psico3.png" class="card-img-top" alt="Programa de desenvolvimento emocional" />
+                    <div class="card-body">
+                        <h5 class="card-title">Programa de Autoconhecimento</h5>
+                        <p class="card-text">Sessões e atividades para ajudar na descoberta de si mesmo, fortalecimento da autoestima e resiliência.</p>
+                        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modal3">Veja mais</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-    <script src="sketch.js"></script>
-  </body>
+
+    <!-- Modais -->
+    <!-- Modal 1 -->
+    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modalLabel1" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content p-4">
+          <div class="modal-header border-0">
+            <h5 class="modal-title" id="modalLabel1">Workshop de Saúde Mental</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+          </div>
+          <div class="modal-body">
+            <p>Este projeto consiste em um workshop que promove práticas de autoconhecimento, técnicas de relaxamento e estratégias para melhorar a saúde emocional. Destinado a adultos que desejam aprender a lidar melhor com o estresse e ansiedade.</p>
+            <p>Utilizamos recursos de psicologia cognitivo-comportamental e exercícios de mindfulness para ajudar os participantes a desenvolverem maior bem-estar e resiliência emocional.</p>
+            <img src="img/projeto-psico1.png" class="img-fluid my-3" alt="Imagem do workshop de saúde mental" />
+            <p>Participe de nossas sessões presenciais ou online para transformar sua relação com suas emoções e melhorar sua qualidade de vida.</p>
+            <div class="d-flex gap-3">
+              <a href="#" class="btn btn-primary" target="_blank">Ver programa completo</a>
+              <a href="#" class="btn btn-outline-primary" target="_blank">Ver detalhes</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 2 -->
+    <div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="modalLabel2" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content p-4">
+          <div class="modal-header border-0">
+            <h5 class="modal-title" id="modalLabel2">App de Meditação Guiada</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+          </div>
+          <div class="modal-body">
+            <p>Aplicativo móvel que oferece sessões de meditação guiada para reduzir o estresse, melhorar o foco e promover o equilíbrio emocional. Ideal para quem busca praticar mindfulness no cotidiano.</p>
+            <p>Inclui diferentes programas de meditação de duração variada, dicas de respiração e acompanhamento do progresso emocional.</p>
+            <img src="img/projeto-psico2.png" class="img-fluid my-3" alt="Imagem do aplicativo de meditação" />
+            <p>Disponível para Android e iOS, o app é uma ferramenta acessível para promover saúde mental de forma prática.</p>
+            <div class="d-flex gap-3">
+              <a href="#" class="btn btn-primary" target="_blank">Baixar o aplicativo</a>
+              <a href="#" class="btn btn-outline-primary" target="_blank">Saiba mais</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 3 -->
+    <div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="modalLabel3" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content p-4">
+          <div class="modal-header border-0">
+            <h5 class="modal-title" id="modalLabel3">Programa de Autoconhecimento</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+          </div>
+          <div class="modal-body">
+            <p>Este programa oferece sessões de terapia individual e atividades de autodesenvolvimento que ajudam na descoberta de si mesmo, fortalecimento da autoestima e resiliência emocional.</p>
+            <p>Utilizamos abordagens baseadas em psicologia positiva e técnicas de mindfulness para promover uma vida mais equilibrada.</p>
+            <img src="img/projeto-psico3.png" class="img-fluid my-3" alt="Imagem do programa de autoconhecimento" />
+            <p>Agende sua sessão e comece sua jornada de crescimento pessoal conosco.</p>
+            <a href="#" class="btn btn-primary" target="_blank">Agende uma sessão</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Rodapé -->
+    <footer class="container py-5 text-center bg-light mt-5">
+        <h2>Entre em contato</h2>
+        <div class="my-3">
+            <a href="https://github.com/seuperfil" target="_blank" class="text-decoration-none me-3">
+                <i class="bi bi-github me-2"></i>GitHub
+            </a>
+            <a href="https://linkedin.com/in/seuperfil" target="_blank" class="text-decoration-none me-3">
+                <i class="bi bi-linkedin me-2"></i>LinkedIn
+            </a>
+            <a href="mailto:seuemail@exemplo.com" class="text-decoration-none">
+                <i class="bi bi-envelope-fill me-2"></i>Contato
+            </a>
+        </div>
+        <p class="mt-4">&copy; 2024 Maithé - Psicóloga - Todos os direitos reservados</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
+style.css (sem alteração, apenas nomes de cores e fontes)
+CopyReplit
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+:root {
+    --cor-principal: #4C6A7E; /* Azul escuro, calmo */
+    --cor-secundaria: #2C3E50; /* Azul mais profundo */
+    --cor-destaque: #F39C12; /* Laranja vibrante */
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    color: var(--cor-principal);
+    background-color: #f8f9fa;
+    line-height: 1.6;
+}
+
+h1, h2, h5 {
+    color: var(--cor-secundaria);
+    font-weight: 700;
+}
+
+.lead {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+a {
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+a:hover {
+    color: var(--cor-destaque);
+}
+
+.btn-outline-primary {
+    border-color: var(--cor-principal);
+    color: var(--cor-principal);
+}
+
+.btn-outline-primary:hover {
+    background-color: var(--cor-principal);
+    color: #fff;
+}
+
+footer {
+    background-color: #e9ecef;
+}
+
+footer h2 {
+    margin-bottom: 1rem;
+}
+
+footer a {
+    color: var(--cor-secundaria);
+}
+
+footer a:hover {
+    color: var(--cor-destaque);
